# mermaid-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/render/: main.rs
src/: error.rs  lib.rs
